<resources>
    <string name="app_name">SSStore</string>
    <string name="version">version: alpha-test</string>
    <string name="index">主页</string>
    <string name="menu_account">我的账户</string>
    <string name="menu_connect">连接VPN</string>
    <string name="menu_aboutus">关于我们</string>
    <string name="menu_settings">设置</string>
    <string name="menu_exit">退出</string>
    <string name="title_activity_login2">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
