<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_index"
        android:title="@string/index"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_setting"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_account"
        android:title="@string/menu_account"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_connect"
        android:title="@string/menu_connect"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_aboutus"
        android:title="@string/menu_aboutus"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_exit"
        android:title="@string/menu_exit"
        app:showAsAction="never" />

</menu>
